# cleaning_tracker

./: .gitignore  DEV_DOCKER.md  README.md  docker-compose.dev.yml  docker-compose.yml  features-guide.md  test-token-helper.sh
api/: .dockerignore  .env  .env.example  .gitignore  Dockerfile  Dockerfile.celery  Dockerfile.redis  ENVIRONMENTS.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
api/api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
api/app/: config.py  main.py
api/app/core/: celery_app.py  database.py  exception_handler.py  exceptions.py  security.py  supabase_client.py
api/app/routers/: auth.py  households.py  invites.py  members.py  notification_preferences.py  occurrences.py  rooms.py  task_definitions.py  task_occurrences.py  tasks.py  user_invites.py
api/app/schemas/: auth.py  household.py  member.py  room.py  task.py
api/app/services/: auth_service.py  email_service.py  invite_service.py  member_service.py  notification_service.py  recurrence.py
api/app/test/: __init__.py  conftest.py  test_auth.py  test_auth_integration.py  test_auth_unit.py  test_celery.py  test_error_handling.py  test_households.py  test_integration.py  test_members.py  test_notifications.py  test_recurrence_service.py  test_rooms.py  test_task_definitions.py  test_task_occurrences.py  test_tasks.py
api/app/tests/: conftest.py  test_auth.py
api/app/worker/: tasks.py
api/scripts/: apply_migration.py  db_schema.py  init_schema.py  start-dev.sh  start-prod.sh  start-staging.sh  test_db_connection.py  test_environments.py
(+86 files in other folders)
