[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.95.0",
  "uvicorn[standard]>=0.23.1",
  "asyncpg>=0.27.0",
  "python-dotenv>=1.0.0",
  "pydantic>=2.1.1",
  "celery>=5.5.0",
  "passlib[bcrypt]>=1.7.4",
  "python-jose>=3.3.0",
  "pytest>=8.3.5",
  "httpx>=0.28.1,<0.29.0",
  "ruff>=0.11.10",
  "pytest-asyncio>=0.26.0",
  "anyio (>=4.9.0,<5.0.0)",
  "supabase>=2.0.0",
  "pydantic-settings>=2.0.0",
  "email-validator>=2.0.0",
  "python-dateutil>=2.9.0.post0",
  "holidays>=0.73",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5", # Version consolidée de pytest
  "pytest-asyncio>=0.26.0",
  "pytest-cov>=6.1.1", # Ajout de pytest-cov ici
  "httpx>=0.25.0", # Assurez-vous que cette version est compatible si utilisée aussi en prod
]

[project.scripts]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]  # Regarder dans le répertoire courant
include = ["app*"]  # Inclure seulement le répertoire 'app' et ses sous-modules
exclude = ["logs*"] # Exclure explicitement 'logs'

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
